--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,11 +21,11 @@ jobs:
     #TODO: Maybe add main package.json in root directory?
     steps:
     - uses: actions/checkout@v2
-    - run: cd Wallet/
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - run: cd Wallet
     - run: npm ci
     - run: npm install -g pkg
     - run: npm run build --if-present
