--- a/Wallet/package.json
+++ b/Wallet/package.json
@@ -6,6 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": "main.js",
+  "pkg": {
+    "scripts": "*.js",
+    "assets": [
+      "node_modules/**/*",
+      "node_modules/terminal-kit/**/*"
+    ]
+  },
   "author": "The Indium Team",
   "license": "ISC",
   "dependencies": {
