--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
         # Artifact name
         name: wallet-linux
         # A file, directory or wildcard pattern that describes what to upload
-        path: ./Wallet/wallet
+        path: ./wallet-linux
         # The desired behavior if no files are found using the provided path.
         warn: "Linux file not present"
     - name: Upload Windows Build Artifact
@@ -42,6 +42,15 @@ jobs:
         # Artifact name
         name: wallet-windows.exe
         # A file, directory or wildcard pattern that describes what to upload
-        path: ./Wallet/wallet.exe
+        path: ./wallet-win.exe
         # The desired behavior if no files are found using the provided path.
         warn: "Windows file not present"
+    - name: Upload MacOS Build Artifact
+      uses: actions/upload-artifact@v2.2.0
+      with:
+        # Artifact name
+        name: wallet-maxos
+        # A file, directory or wildcard pattern that describes what to upload
+        path: ./wallet-macos
+        # The desired behavior if no files are found using the provided path.
+        warn: "MacOS file not present"
