--- a/Wallet/package.json
+++ b/Wallet/package.json
@@ -3,16 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "bin": "main.js",
   "pkg": {
     "scripts": "*.js",
     "assets": [
-      "node_modules/**/*",
-      "node_modules/terminal-kit/**/*"
+      "node_modules/**/*"
     ]
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "The Indium Team",
   "license": "ISC",
