--- a/Daemon/package.json
+++ b/Daemon/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "fastify": "^3.5.1",
+    "lowdb": "^1.0.0",
     "node-bash-title": "0.0.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.1"
